# angio-frame-selector

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  Dockerfile  auth.py  crai_sync.py  generate_demo_data.py  main.py  metadata.py  pyproject.toml
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  userColors.js
frontend/src/components/: ActionPanel.jsx  AdminPanel.jsx  DatasetManager.jsx  ExportVersions.jsx  FrameViewer.jsx  LoginPage.jsx  Sidebar.jsx  StatsBar.jsx  UserDatasetAssignments.jsx
