[project]
name = "keyselector-backend"
version = "0.1.0"
description = "FastAPI backend for coronary angiography frame selection and annotation"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "httpx>=0.27.0",
  "numpy==2.2.1",
  "opencv-python-headless==4.10.0.84",
  "pillow==11.1.0",
  "pydicom==3.0.1",
  "PyJWT==2.9.0",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.34.0",
]

[tool.uv]
package = false
dev-dependencies = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]